--- a/index.htm
+++ b/index.htm
@@ -8,94 +8,53 @@
     <meta name="keywords" content="Master , Master kp , master kp netlify , master kp instagram">
     <meta name="author" content="Kushagra Pal">
     <link rel="icon" type="png/gif/img" href="./favicon.png">
-    <title>Master kp</title>
-    <link rel="stylesheet" href="./style.css"/>
+    <title>Master KP</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    <div class="container">
-        
-        <div id="title" class="floating">
-            Master KP
+<body onload="hacker_background()">
+    <hacker_look class="stack_them">
+    </hacker_look>
+    <div class="container stack_them">
+        <div id="title">
+            Master Kp
         </div>
     </div>
-    <div class="area" >
-        <ul class="circles">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-    </div>
-    <div class="container">
-        <div class="saturn floating">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="_x32_" viewBox="0 0 512 512" xml:space="preserve">
-                <g>
-                    <defs>
-                        <linearGradient id="gradient" x1="0%" y1="0%" x2="100%" y2="0%">
-                          <stop offset="0%"   stop-color="#05a"/>
-                          <stop offset="100%" stop-color="#0a5"/>
-                        </linearGradient>
-                      </defs>
-                    <path class="saturn-ring" d="M397.382,161.818c6.078,7.859,11.547,16.281,16.281,25.203c25.89,4.219,41.546,12.859,40.734,25.797   c-0.844,13.297-80.75,50.953-191.203,75.906l0,0c-0.109,0.016-0.203,0.031-0.297,0.063   c-110.453,24.953-198.797,25.297-205.25,13.656c-6.313-11.344,4.109-25.875,25.688-40.813c0.422-10.094,1.719-20.031,3.844-29.75   c-57.75,27.391-92.141,57.938-86.594,82.484c12.359,54.719,133.328,60.219,274.328,28.906c0.094-0.016,0.188-0.047,0.281-0.063   c0.188-0.047,0.375-0.078,0.563-0.109c140.766-32.344,247.64-89.313,235.265-144.031   C505.491,174.521,461.304,161.724,397.382,161.818z"/>
-                    <path class="saturn-planet" d="M258.648,270.537c0-0.016,0.016-0.016,0.016-0.016c64.688-14.609,116.828-33.25,148.672-47.75   c-0.375-2.141-0.797-4.266-1.266-6.375C387.132,132.583,303.835,79.974,220.023,98.912S83.632,201.146,102.554,284.943   c0.469,2.125,1.016,4.219,1.578,6.313C139.101,290.662,194.132,285.099,258.648,270.537z"/>
-                    <path class="saturn-planet" d="M280.054,361.333h-0.016l-0.422,0.094l-0.453,0.109c-43.703,9.703-85.609,15.859-123,18.25   c36.016,30.609,85.453,44.515,135.094,33.312c49.641-11.218,88.297-45.031,107.656-88.14   C364.132,338.865,323.679,351.318,280.054,361.333z"/>
-                </g>
-            </svg>
-        </div>
-    </div>
-    <div class="container greetings" style="display: block;">
-            Greetings,<br/>
+    <script>
 
-            My name is Kushagra Pal, and I go by the moniker Master KP. As an ardent enthusiast of programming, I find solace in crafting elegant code and solving intricate problems. My journey in the world of technology has been both exhilarating and enlightening.
-            <br/>
-            Allow me to share a glimpse of my digital presence:<br/>
-            <ul>
-                <li>Instagram: You can find me on Instagram as <a href="https://www.instagram.com/master_kp27/"> master_kp27</a>. Feel free to connect, and let's exchange ideas and inspiration.</li>
-                <li>Email: For any professional inquiries or discussions, you can reach out to me at <a href="mailto:kp_27_27@outlook.com">kp_27_27@outlook.com</a>. I'm always eager to collaborate and explore new opportunities.</li>
-                <li>My coding adventures unfold on GitHub, where I contribute to open-source projects and showcase my personal endeavors. You can explore my profile at <a href="https://github.com/master-kp">Master-KP on GitHub.</a></a></li>    
-            </ul>
-            <br/>
-            
-            In this ever-evolving landscape of technology, I strive to learn, create, and make a positive impact. If you share a passion for programming, feel free to connect—I believe that collaboration fuels innovation.
-            <br/>
-            Thank you for your time, and I look forward to engaging with fellow enthusiasts and professionals alike.
-            <br/>
-            Best regards,
-            <br/>
-            Master KP
-    </div>
-<script>
-    function fitToScreen() {
-    // Fitting title
-    var windowWidth = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
+        var big_text = "";
 
-    var titleSize = (windowWidth * 10 / 54);
+        i = 0;
+        while(i <= 70){
+            big_text = big_text + Math.PI; 
+            i++;
+        }
 
-    document.getElementById("title").style.fontSize = titleSize + "px";
+        document.querySelector("hacker_look").innerHTML = big_text;
 
-    // Fitting Saturn
+        letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+        function hacker_background(){
+            setInterval(()=>{ 
+            document.querySelector("hacker_look").innerHTML = document.querySelector("hacker_look").innerText.split("")
+            .map(letter => letters[Math.floor(Math.random() * 26)])
+            .join("");
+            },10);
+        }
 
-    var saturnWidth = windowWidth / 2;
+        function fitToScreen() {
+            // Fitting title
+            var windowWidth = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
 
-    document.querySelectorAll(".saturn").forEach(function (element) {
-        element.style.width = saturnWidth + "px";
-        element.style.aspectRatio = "1.61803399";
-    });
-}
+            var titleSize = (windowWidth * 9 / 53);
 
-fitToScreen();
+            document.getElementById("title").style.fontSize = titleSize + "px";
+        }
 
-window.addEventListener('resize', function () {
-    fitToScreen();
-});
+        fitToScreen();
 
+        window.addEventListener('resize', function () {
+            fitToScreen();
+        });
 
-</script>
+    </script>
 </body>
 </html>
